--- a/style.css
+++ b/style.css
@@ -1,37 +1,65 @@
 @font-face {
     font-family: 'Poppins';
     font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://img1.wsimg.com/gfonts/s/poppins/v22/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2) format('woff2');
+}
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: url(https://img1.wsimg.com/gfonts/s/poppins/v22/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
+}
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url(https://img1.wsimg.com/gfonts/s/poppins/v22/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2) format('woff2');
+}
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://img1.wsimg.com/gfonts/s/poppins/v22/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2) format('woff2');
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    background: url('https://images.squarespace-cdn.com/content/v1/5d01140575e0d50001c22644/1566942773551-VIHKERK68MKJXPY564KX/_E3A4425.jpg') no-repeat center center fixed;
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.container {
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 40px;
-    border-radius: 8px;
-}
-
-.logo {
-    max-width: 200px;
-    margin-bottom: 20px;
-}
-
-h1 {
+    background-color: black;
     color: white;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    position: relative;
+}
+
+.logo img {
+    width: 150px;
+    height: 150px;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://images.squarespace-cdn.com/content/v1/5d01140575e0d50001c22644/1566942773551-VIHKERK68MKJXPY564KX/_E3A4425.jpg') no-repeat center center/cover;
+    opacity: 0.3;
+    z-index: -1;
+}
+
+.text {
     font-size: 24px;
     font-weight: 600;
+    margin-top: 20px;
 }
