--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body {
 .logo img {
     width: 150px;
     height: 150px;
+    max-width: 150px;
+    max-height: 150px;
+    object-fit: contain;
+    display: block;
 }
 
 .background {
