--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://images.squarespace-cdn.com/content/v1/5d01140575e0d50001c22644/1566942773551-VIHKERK68MKJXPY564KX/_E3A4425.jpg') no-repeat center center/cover;
+    background: url('https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-warehouse.jpg?raw=true') no-repeat center center/cover;
     opacity: 0.3;
     z-index: -1;
 }
